// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AggregatedTranscriptions Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kHpyKm"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 daa-dNw"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gXHNCl sc-hAZoDl cyCRYR"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jQHmns"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 kuzDvD"
          >
            <span
              className="StyledText-sc-1sadyjn-0 exFAKq"
            >
              Transcribed Text
            </span>
            <button
              className="StyledButton-sc-323bzc-0 gTwSnm"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 fesGux"
              >
                ADD LINE
              </span>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 iVkeeE sc-fEOsli bBJgsB"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 foaJRf"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 cqNgDW"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 hHzwUm"
                >
                  <h6
                    className="sc-iBkjds iPZlzf"
                  >
                    Aggregated Transcription
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 ffXdkS"
                >
                  <h6
                    className="sc-iBkjds iPZlzf"
                  >
                    Flag
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 dlqpcO"
                >
                  <h6
                    className="sc-iBkjds sc-ftvSup iPZlzf csQhrw"
                  >
                    Consensus Score
                  </h6>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 eSFhcA"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 jMULZb sc-gKXOVf eDWNkN"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 eWQpDB"
                >
                  This page does not contain transcription data.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AggregationSettings Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kHpyKm"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cvEsHz"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 hkVaJm sc-fLlhyt hrXfVh"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-ellipsis "
          data-icon="ellipsis"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 256a56 56 0 1 1 112 0A56 56 0 1 1 8 256zm160 0a56 56 0 1 1 112 0 56 56 0 1 1 -112 0zm216-56a56 56 0 1 1 0 112 56 56 0 1 1 0-112z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="StyledStack-sc-ajspsk-0 DIRUt"
      >
        <div
          className="StyledStack__StyledStackLayer-sc-ajspsk-1 bBReQo"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ffXdkS"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 bJAyKF"
            >
              <span
                className="StyledText-sc-1sadyjn-0 fesGux"
              >
                Edit Aggregation Settings
              </span>
              <button
                aria-label="Close Aggregation Settings"
                className="StyledButton-sc-323bzc-0 gTwSnm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle-xmark "
                  data-icon="circle-xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </div>
            <div
              className="StyledBox-sc-13pk1d4-0 ffXdkS"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 ffXdkS"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 cPIyYE"
                >
                  <span
                    className="StyledText-sc-1sadyjn-0 fesGux"
                  >
                    Choose a clustering algorithm based on the way in which transcriptions have been made.
                  </span>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
                  />
                  <div
                    className="StyledBox-sc-13pk1d4-0 dZhpqU"
                  >
                    <button
                      className="StyledButton-sc-323bzc-0 gTwSnm"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 cPIyYE sc-idiyUo kDIEiE"
                      >
                        <img
                          alt="Optics Aggregation Example"
                          className="StyledImage-sc-ey4zx9-0 hxQdwK"
                          onLoad={[Function]}
                          src="optics.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 fesGux"
                        >
                          OPTICS Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 eWQpDB"
                        >
                          Used for clustering full-width transcriptions
                        </span>
                      </div>
                    </button>
                    <button
                      className="StyledButton-sc-323bzc-0 gTwSnm"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 cPIyYE sc-dIouRR ivCsAM"
                      >
                        <img
                          alt="DBScan Aggregation Example"
                          className="StyledImage-sc-ey4zx9-0 hxQdwK"
                          onLoad={[Function]}
                          src="dbscan.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 fesGux"
                        >
                          DBSCAN Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 eWQpDB"
                        >
                          Used for clustering shorter, incomplete transcriptions of a line
                        </span>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 bFHODv"
                >
                  <button
                    aria-label="Close Aggregation Settings"
                    className="StyledButton-sc-323bzc-0 gTwSnm"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 fesGux"
                    >
                      CLOSE AND CANCEL
                    </span>
                  </button>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hZNsuE"
                  />
                  <button
                    className="StyledButton-sc-323bzc-0 cBUZLA"
                    disabled={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 fesGux"
                    >
                      NEXT
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DownloadDataModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kHpyKm"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 jsKrNT"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gVWDuq"
      >
        <span
          className="StyledText-sc-1sadyjn-0 kCXcBZ"
        >
          Download subject data
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hZNsuE"
        />
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 gAExMf"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle-xmark fa-xs "
            data-icon="circle-xmark"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
      />
      <span
        className="StyledText-sc-1sadyjn-0 bZVGFa"
      >
        Download a .zip file containing:
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 ffXdkS"
      >
        <span
          className="StyledText-sc-1sadyjn-0 fesGux"
        >
          • Line by line transcription and metadata (.csv)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
        />
        <span
          className="StyledText-sc-1sadyjn-0 fesGux"
        >
          • Text-only file (.txt)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
        />
        <span
          className="StyledText-sc-1sadyjn-0 fesGux"
        >
          • Raw, unparsed transcription data (.json)
        </span>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 cyJZGI"
      >
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 bmIggO"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 fesGux"
          >
            CLOSE
          </span>
        </button>
        <button
          aria-label="Download Subject Data"
          className="StyledButton-sc-323bzc-0 bmIggO"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 fesGux"
          >
            DOWNLOAD
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FilmstripViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kHpyKm"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 jUsvKY sc-jIZahH kQIqFd"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gVWDuq"
      >
        <span
          className="StyledText-sc-1sadyjn-0 exFAKq"
        >
          All Pages
        </span>
        <button
          className="StyledButton-sc-323bzc-0 gTwSnm"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 fesGux sc-himrzO iCYxnp"
          >
            Delete Pages
          </span>
        </button>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 kQlWzp"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots HeaderButtons LayoutButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <button
    className="StyledButton-sc-323bzc-0 gTwSnm"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kuCVES"
    >
      <span
        className="StyledText-sc-1sadyjn-0 Nwegw sc-bBrHrO fAOaQp"
      >
        Layout
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iLMAuj"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 enJS"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-xs "
          color="#555555"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gZcVlJ"
        />
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-xs fa-rotate-90 "
          color="#CCCCCC"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons MoreButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <button
    aria-label="Open Drop"
    className="StyledButton-sc-323bzc-0 gTwSnm"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 hwUpZO"
    >
      <span
        className="StyledText-sc-1sadyjn-0 Nwegw"
      >
        MORE
      </span>
      <svg
        aria-label="FormDown"
        className="StyledIcon-sc-ofa7kd-0 dnWFHk"
        viewBox="0 0 24 24"
      >
        <path
          d="m18 9-6 6-6-6"
          fill="none"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons UndoButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <button
    className="StyledButton-sc-323bzc-0 cBUZLA"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kuCVES"
    >
      <span
        className="StyledText-sc-1sadyjn-0 Nwegw sc-bBrHrO fAOaQp"
      >
        Undo
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iLMAuj"
      />
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-arrow-rotate-right fa-xs "
        color="#555555"
        data-icon="arrow-rotate-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M386.3 160H336c-17.7 0-32 14.3-32 32s14.3 32 32 32H464c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32s-32 14.3-32 32v51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots LineViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kHpyKm"
  />
</div>
`;

exports[`Storyshots MarkApproved Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <label
    checked={false}
    className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dObNUp"
    disabled={false}
    label={
      <Styled(Text)
        color="#5C5C5C"
      >
        Ready For Review
      </Styled(Text)>
    }
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <span
      className="StyledText-sc-1sadyjn-0 Nwegw sc-ivTmOn gTqa-Dk"
    >
      Ready For Review
    </span>
    <div
      checked={false}
      className="StyledBox-sc-13pk1d4-0 kMdWJp StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      disabled={false}
    >
      <input
        checked={false}
        className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kpjyBD"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        checked={false}
        className="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 jLmkvv"
        disabled={false}
      >
        <span
          checked={false}
          className="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 jNmllh"
          disabled={false}
        />
      </span>
    </div>
  </label>
</div>
`;

exports[`Storyshots MetadataButton Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kHpyKm"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cfjSHM"
    >
      <button
        aria-label="Open Metadata Information"
        className="StyledButton-sc-323bzc-0 ijbQwf"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 VUkGq"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info sc-ezWOiH fuBmks"
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 80a48 48 0 1 1 96 0A48 48 0 1 1 48 80zM0 224c0-17.7 14.3-32 32-32H96c17.7 0 32 14.3 32 32V448h32c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H64V256H32c-17.7 0-32-14.3-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SearchModalContainer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kHpyKm"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iwrneS"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 fKrmMZ"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ffXdkS"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ghEOgK"
          >
            <span
              className="StyledText-sc-1sadyjn-0 kCXcBZ"
            >
              Search or Filter
            </span>
            <button
              aria-label="Close Subject Search Modal"
              className="StyledButton-sc-323bzc-0 ijbQwf"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-circle-xmark "
                data-icon="circle-xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
          />
          <span
            className="StyledText-sc-1sadyjn-0 fesGux sc-ciZhAO fnpktQ"
          >
            Find a specific subject
          </span>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
          />
          <form
            className="StyledBox-sc-13pk1d4-0 ffXdkS"
            onSubmit={[Function]}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 dVYoao"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 evVmme"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 ffXdkS FormField__FormFieldBox-sc-m9hood-0 kdSckY sc-jdAMXn vPItP"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 ljCHJR"
                    htmlFor="type"
                  >
                    ID TYPE
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 bKZYaB FormField__FormFieldContentBox-sc-m9hood-1"
                  >
                    <button
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-label="Open Drop; Selected: [object Object]"
                      className="StyledButton-sc-323bzc-0 gTwSnm StyledSelect__StyledSelectDropButton-sc-znp66n-5 iRgMjD"
                      id="type"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 ghEOgK"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 jviqQs"
                        >
                          <span
                            className="StyledText-sc-1sadyjn-0 fesGux"
                          >
                            Select...
                          </span>
                          <input
                            className="StyledSelect__HiddenInput-sc-znp66n-2 jIqbfH"
                            id="type__input"
                            name="type"
                            readOnly={true}
                            type="text"
                          />
                        </div>
                        <div
                          className="StyledBox-sc-13pk1d4-0 fqMXAB"
                          style={
                            Object {
                              "minWidth": "auto",
                            }
                          }
                        >
                          <svg
                            aria-label="FormDown"
                            className="StyledIcon-sc-ofa7kd-0 jRiYNI"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="m18 9-6 6-6-6"
                              fill="none"
                              stroke="#000"
                              strokeWidth="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iVXdqk"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 kMatiK"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 ffXdkS FormField__FormFieldBox-sc-m9hood-0 kdSckY sc-jdAMXn vPItP"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 ljCHJR"
                    htmlFor="id"
                  >
                    NAME
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 bKZYaB FormField__FormFieldContentBox-sc-m9hood-1"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 dKQnNN"
                        color="red"
                        disabled={false}
                        id="id"
                        name="id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="eg. 58674"
                        size="small"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
            />
            <span
              className="StyledText-sc-1sadyjn-0 fesGux sc-ciZhAO fnpktQ"
            >
              Filter subject list by status
            </span>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 gVWDuq"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 ffXdkS"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 krcShr"
                >
                  Approval Status
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 ffXdkS FormField__FormFieldBox-sc-m9hood-0 kdSckY"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 bKZYaB FormField__FormFieldContentBox-sc-m9hood-1"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bLzCdM"
                      disabled={false}
                      htmlFor="unseen"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          UNSEEN
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iIbzSS StyledCheckBox-sc-1dbk5ju-6 eJWclz"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 YLCoI"
                          disabled={false}
                          id="unseen"
                          name="unseen"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 fTTgRQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 fesGux"
                      >
                        UNSEEN
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 ffXdkS FormField__FormFieldBox-sc-m9hood-0 kdSckY"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 bKZYaB FormField__FormFieldContentBox-sc-m9hood-1"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bLzCdM"
                      disabled={false}
                      htmlFor="in_progress"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          IN PROGRESS
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iIbzSS StyledCheckBox-sc-1dbk5ju-6 eJWclz"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 YLCoI"
                          disabled={false}
                          id="in_progress"
                          name="in_progress"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 fTTgRQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 fesGux"
                      >
                        IN PROGRESS
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 ffXdkS FormField__FormFieldBox-sc-m9hood-0 kdSckY"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 bKZYaB FormField__FormFieldContentBox-sc-m9hood-1"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bLzCdM"
                      disabled={false}
                      htmlFor="ready"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          READY FOR REVIEW
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iIbzSS StyledCheckBox-sc-1dbk5ju-6 eJWclz"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 YLCoI"
                          disabled={false}
                          id="ready"
                          name="ready"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 fTTgRQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 fesGux"
                      >
                        READY FOR REVIEW
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 ffXdkS FormField__FormFieldBox-sc-m9hood-0 kdSckY"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 bKZYaB FormField__FormFieldContentBox-sc-m9hood-1"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bLzCdM"
                      disabled={false}
                      htmlFor="approved"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          APPROVED
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iIbzSS StyledCheckBox-sc-1dbk5ju-6 eJWclz"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 YLCoI"
                          disabled={false}
                          id="approved"
                          name="approved"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 fTTgRQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 fesGux"
                      >
                        APPROVED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 ffXdkS"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 krcShr"
                >
                  Additional Filters
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 ffXdkS FormField__FormFieldBox-sc-m9hood-0 kdSckY"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 bKZYaB FormField__FormFieldContentBox-sc-m9hood-1"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bLzCdM"
                      disabled={false}
                      htmlFor="flagged"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          FLAGGED
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iIbzSS StyledCheckBox-sc-1dbk5ju-6 eJWclz"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 YLCoI"
                          disabled={false}
                          id="flagged"
                          name="flagged"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 fTTgRQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 fesGux"
                      >
                        FLAGGED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jA-DxiE"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 cyJZGI"
            >
              <button
                aria-label="Close Subject Search Modal"
                className="StyledButton-sc-323bzc-0 gTwSnm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 fesGux sc-ciZhAO fnpktQ"
                >
                  Close
                </span>
              </button>
              <button
                aria-label="Submit Subject Search Query"
                className="StyledButton-sc-323bzc-0 gTwSnm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="submit"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 fesGux sc-ciZhAO fnpktQ"
                >
                  Search
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectLockedModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kHpyKm"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dPucVn"
    >
      <span
        className="StyledText-sc-1sadyjn-0 kCXcBZ"
      >
        Subject locked
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
      />
      <span
        className="StyledText-sc-1sadyjn-0 fesGux sc-gXmSlM kMvSyZ"
      >
        This subject cannot be accessed because 
        <strong />
         is currently accessing it.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
      />
      <span
        className="StyledText-sc-1sadyjn-0 fesGux sc-gXmSlM kMvSyZ"
      >
        For access, ask them to close their version.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
      />
      <button
        aria-label="Return to Group Index Page"
        className="StyledButton-sc-323bzc-0 bmIggO"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span
          className="StyledText-sc-1sadyjn-0 fesGux"
        >
          BACK TO GROUP INDEX
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 jzCZuc"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kWtUd"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="StyledBox-sc-13pk1d4-0 ivvLkX"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ghEOgK"
        >
          <span
            className="StyledText-sc-1sadyjn-0 exFAKq"
          >
            Original Subject
          </span>
          <div
            className="StyledBox-sc-13pk1d4-0 enJS"
          >
            <button
              className="StyledButton-sc-323bzc-0 bmIggO"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 fesGux"
              >
                HIDE ALL LINES
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 bNfSsp sc-efBctP fTRUxf"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 bNfSsp sc-cTQhss eObXZg"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 egnZEr sc-iAvgwm kpvlkF"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 ffXdkS sc-cTQhss sc-jOrMOR eObXZg cuNWFj"
          />
        </div>
        <div
          className="StyledBox-sc-13pk1d4-0 bNfSsp"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UnapproveModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dteriQ"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kHpyKm"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dPucVn"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gVWDuq"
      >
        <span
          className="StyledText-sc-1sadyjn-0 kCXcBZ"
        >
          Unapprove subject data
        </span>
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 bmIggO"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle-xmark fa-xs "
            data-icon="circle-xmark"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
      />
      <span
        className="StyledText-sc-1sadyjn-0 fesGux sc-cCsOjp frISnr"
      >
        By unapproving this subject, the subject's data will be unavailable for future downloads until re-marked as approved.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
      />
      <span
        className="StyledText-sc-1sadyjn-0 fesGux sc-cCsOjp frISnr"
      >
        This action can be reversed at any time.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceSOss"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 cyJZGI"
      >
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 bmIggO"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 fesGux"
          >
            CLOSE AND CANCEL
          </span>
        </button>
        <button
          aria-label="Confirm to Unapprove Subject"
          className="StyledButton-sc-323bzc-0 bmIggO"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 fesGux"
          >
            YES, UNAPPROVE
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
